SunSkyDemo/force-app/main/default/objects/ExceptionEvent__e/ExceptionEvent__e.object-meta.xml
<CustomObject>
    <label>Exception Event</label>
    <pluralLabel>Exception Events</pluralLabel>
</CustomObject>