SunSkyDemo/force-app/main/default/objects/ExceptionEvent__e/fields/Cause__c.field-meta.xml
<CustomField>
    <fullName>Cause__c</fullName>
    <label>Cause</label>
    <length>45</length>
    <type>Text</type>
</CustomField>