SunSkyDemo/force-app/main/default/objects/ExceptionEvent__e/fields/Stack_Trace_String__c.field-meta.xml
<CustomField>
    <fullName>Stack_Trace_String__c</fullName>
    <label>Stack Trace String</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>