SunSkyDemo/force-app/main/default/objects/ExceptionEvent__e/fields/Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Type_Name__c</fullName>
    <label>Type Name</label>
    <length>45</length>
    <type>Text</type>
</CustomField>